--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-breack-final-back",
   "version": "1.0.0",
   "description": "Project Breack Final Tienda Artesanal",
-  "main": "index.js",
+  "main": "/index.js",
   "scripts": {
     "test": "test",
     "start": "node src/index.js",
@@ -28,12 +28,12 @@
   "homepage": "https://github.com/Rosa-M-FS/s2324_Back#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "moongose": "^1.0.0",
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
